# Wayland-Roc

./: .clangd  .gitignore  CMakeLists.txt  README.md  TODO.md  build.json  build.py
resources/: portals.conf
scripts/: formats.py  shaders.py
src/: main.cpp
src/backend/wayland/: backend.hpp  output.cpp  wayland.cpp
src/common/: event_loop.cpp  event_loop.hpp  ref.hpp  util.hpp
src/compositor/: display.cpp  display.hpp  output.cpp  pointer.cpp  server.cpp  server.hpp
src/compositor/protocol/: protocol.cpp  protocol.hpp
src/core/: chrono.cpp  chrono.hpp  cmd-parse.hpp  color.hpp  containers.hpp  debug.cpp  debug.hpp  enum.hpp  event.cpp  event.hpp  eventfd.hpp  exec.cpp  exec.hpp  fd.cpp  fd.hpp  flags.hpp  format.cpp  hash.hpp  id.cpp  id.hpp  log.cpp  log.hpp  math.hpp  memory.cpp  memory.hpp  object.cpp  object.hpp  pch.hpp  process.cpp  process.hpp  region.hpp  shm.cpp  shm.hpp  signal.hpp  stack.hpp  stacktrace.cpp  stacktrace.hpp  string.cpp  string.hpp  types.hpp  (+2 more)
src/exec/: exec.cpp  exec.hpp
src/gpu/: buffer.cpp  commands.cpp  descriptors.cpp  formats.cpp  formats.inl  functions.cpp  functions.hpp  gpu.cpp  gpu.hpp  image-pool.cpp  image.cpp  internal.hpp  pipeline.cpp  semaphore.cpp
src/gpu/shaders/: shared.h  shared.slang
src/imui/: imgui.cpp  imui.hpp  internal.hpp
src/io/: input.cpp  internal.hpp  io.cpp  io.hpp  main.cpp  output.cpp
src/io/drm/: drm.cpp  drm.hpp  properties.cpp
src/io/evdev/: evdev.cpp
src/io/libinput/: events.cpp  libinput.cpp  libinput.hpp
src/io/session/: session.cpp  session.hpp
src/io/udev/: udev.cpp
src/io/wayland/: output.cpp  seat.cpp  wayland.cpp  wayland.hpp
src/renderer/: renderer.cpp  renderer.hpp  vulkan_functions.hpp  vulkan_helpers.cpp  vulkan_helpers.hpp
src/roc/: main.cpp  roc.hpp  xwayland.cpp
src/roc/app/: background.cpp  launcher.cpp  log-viewer.cpp
src/scene/: client.cpp  cursor.cpp  damage.cpp  data.cpp  input.cpp  internal.hpp  main.cpp  node.cpp  output.cpp  render.cpp  render.h  render.slang  scene.cpp  scene.hpp  seat.cpp  window.cpp
src/scene/node/: base.hpp  input-region.cpp  mesh.cpp  node.cpp  texture.cpp  tree.cpp
src/scene/shader/: render.frag.glsl  render.h
src/seat/: client.cpp  cursor.cpp  data.cpp  focus.cpp  input-region.cpp  input.cpp  internal.hpp  keyboard.cpp  pointer.cpp  seat.cpp  seat.hpp
src/shell/: io.cpp  main.cpp  menu.cpp  shell.hpp  xwayland.cpp
src/shell/app/: background.cpp  launcher.cpp  log-viewer.cpp
src/ui/: imconfig.h  internal.hpp  ui.cpp  ui.hpp
src/ui/shader/: render.frag.glsl  render.h  render.vert.glsl
src/way/: buffer.cpp  client.cpp  client.hpp  cursor-shape.cpp  data.cpp  decoration.cpp  dmabuf.cpp  gestures.cpp  internal.hpp  main.cpp  output.cpp  popup.cpp  seat.cpp  server.cpp  server.hpp  shell.cpp  shm.cpp  subsurface.cpp  surface.cpp  util.cpp  util.hpp  viewport.cpp  way.cpp  way.hpp
src/way/buffer/: buffer.cpp  buffer.hpp  dmabuf.cpp  shm.cpp  syncobj.cpp
src/way/data/: data.cpp  data.hpp
src/way/output/: output.cpp  output.hpp
src/way/seat/: cursor-shape.cpp  gestures.cpp  internal.hpp  keyboard.cpp  pointer-constraints.cpp  pointer.cpp  relative-pointer.cpp  seat.cpp  seat.hpp
src/way/shell/: popup.cpp  shell.cpp  shell.hpp
src/way/surface/: decoration.cpp  region.hpp  state.hpp  subsurface.cpp  surface.cpp  surface.hpp  viewport.cpp
src/wm/: background.cpp  client.cpp  cursor.cpp  data.cpp  focus.cpp  hotkeys.cpp  interaction.cpp  internal.hpp  io.cpp  keyboard.cpp  launcher.cpp  log.cpp  main.cpp  movesize.cpp  output.cpp  pointer-constraints.cpp  pointer.cpp  scene.cpp  seat.cpp  surface.cpp  window.cpp  wm.cpp  wm.hpp  zone.cpp
src/wrei/: chrono.cpp  event.cpp  event.hpp  fd.hpp  flags.hpp  format.cpp  log.cpp  log.hpp  object.cpp  object.hpp  pch.hpp  ref.hpp  region.cpp  region.hpp  stacktrace.cpp  types.hpp  util.hpp
src/wren/: buffer.cpp  commands.cpp  descriptors.cpp  formats.cpp  functions.cpp  functions.hpp  image.cpp  internal.hpp  pipeline.cpp  semaphore.cpp  swapchain.cpp  wren.cpp  wren.hpp  wren_descriptors.cpp  wren_format.cpp  wren_functions.hpp  wren_helpers.cpp  wren_helpers.hpp  wren_init.cpp  wren_internal.hpp  wren_pipelines.cpp  wren_resources.cpp  wren_semaphore.cpp  wren_swapchain.cpp
src/wren/shaders/: shared.h  shared.slang
src/wrio/: input.cpp  internal.hpp  main.cpp  output.cpp  render.cpp  wrio.cpp  wrio.hpp
src/wrio/evdev/: evdev.cpp
src/wrio/libinput/: libinput.cpp
src/wrio/session/: session.cpp
src/wrio/wayland/: output.cpp  seat.cpp  wayland.cpp  wayland.hpp
src/wroc/: buffer.cpp  client.cpp  cursor.cpp  data.cpp  debug.cpp  decoration.cpp  dmabuf.cpp  event.cpp  event.hpp  gestures.cpp  imgui.cpp  interaction.cpp  keyboard.cpp  output.cpp  pointer.cpp  process.cpp  protocol.cpp  protocol.hpp  renderer.cpp  scene.cpp  seat.cpp  server.cpp  server.hpp  shm.cpp  subsurface.cpp  surface.cpp  syncobj.cpp  util.cpp  util.hpp  viewporter.cpp  wroc.hpp  xdg_shell.cpp
src/wroc/applets/: launcher.cpp
src/wroc/backend/: backend.cpp
src/wroc/backend/direct/: backend.cpp  backend.hpp  drm.cpp  events.cpp  input.cpp  output.cpp
src/wroc/backend/wayland/: backend.hpp  output.cpp  seat.cpp  wayland.cpp
src/wroc/shaders/: blit.h  blit.slang  imgui.h  imgui.slang
src/wrocx/: buffer.cpp  internal.hpp  main.cpp  util.hpp  wroc.cpp  wroc.hpp
src/wrui/: client.cpp  imgui.cpp  input.cpp  internal.hpp  main.cpp  render.cpp  render.h  render.slang  scene.cpp  window.cpp  wrui.cpp  wrui.hpp
